--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "electron main.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "GPL-3.0",
   "dependencies": {
-    "electron": "^8.2.1",
+    "express": "^4.17.1",
     "peer": "^0.5.2"
   }
 }
